# dustman

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_alloc.cpp  bench_smoke.cpp  run.sh
docs/: allocation.md  coding-standards.md  collection.md  design.md  platform.md
include/dustman/: alloc.hpp  collect.hpp  dustman.hpp  gc_ptr.hpp  heap.hpp  root.hpp  tracer.hpp  type_info.hpp  visitor.hpp
specs/: README.md  collect.cfg  collect.tla  gen.cfg  gen.tla  stw.cfg  stw.tla
src/: collect.cpp  heap.cpp  placeholder.cpp
tests/: CMakeLists.txt  test_alloc.cpp  test_alloc_stress.cpp  test_auto_collect.cpp  test_block.cpp  test_collect.cpp  test_evacuate.cpp  test_forwarding.cpp  test_gc_ptr.cpp  test_huge.cpp  test_isolation.cpp  test_medium.cpp  test_minor.cpp  test_recycle.cpp  test_root.cpp  test_smoke.cpp  test_stw.cpp  test_sweep.cpp  test_tracer.cpp  test_type_info.cpp
